--- a/src/component/home/card/Card.module.css
+++ b/src/component/home/card/Card.module.css
@@ -28,6 +28,8 @@
 .topContainer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    justify-content: center;
     gap: 1%;
 }
 
@@ -43,14 +45,18 @@
     width: 380px; /* Box width */
     height: 240px; /* Box height */
     padding: 10px;
+    transition: all 0.3s ease-in-out;
 }
-
+.box:hover{
+    transform: scale(1.02); 
+}
 /* Word */
 .Word {
     font-size: 20px;
-    align-items: center;
+    align-content: center;
     justify-content: center;
     display: flex;
+    font-weight: bold;
 }
 
 /* Line */
@@ -59,15 +65,16 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    font-size: 12px;
 }
 
 /* Button styling */
 .Button {
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: black;
     color: white;
-    width: 60px;
-    height: 30px;
+    width: 70px;
+    height: 35px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -100,7 +107,8 @@
 
 /* Logo styling */
 .logo {
-    color: skyblue;
+    /* margin-top: -30px; */
+    color: rgb(173, 61, 243);
     display: flex;
     justify-content: center;
     align-items: center;
